fixed layout issues for links section

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -53,7 +53,7 @@ $enable-responsive-font-sizes: true;
 // enable equal height for cards
 $card-height: 100vh;
 // project details header background
-$project-details-bg-color: #f9f9f9;
+$project-details-bg-color: rgba(249,249,249,1);
 
 
 
